# AI2048-FTXUI

./: .gitignore  AI_USAGE.md  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.cpp
